--- a/src/blocks/_variables.scss
+++ b/src/blocks/_variables.scss
@@ -1,7 +1,9 @@
 $bg-color: #684e4e;
+$accent-color: #D90002;
 
 $logo-bg-color: radial-gradient(66.89% 66.89% at 59.24% 24.84%, #FEC8C1 0%, rgba(229, 106, 89, 0) 100%), #D13233;
 
 $text-color: white;
+$alt-text-color: black;
 
 $header-height: 127px;
