--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -7,5 +7,15 @@
 @import '../blocks/page';
 
 @import '../blocks/logo';
+@import '../blocks/link';
 
 @import '../blocks/header';
+@import '../blocks/social-links';
+@import '../blocks/social-link';
+@import '../blocks/links-with-preview.scss';
+@import '../blocks/intro';
+@import '../blocks/filter';
+@import '../blocks/checkbox-input';
+@import '../blocks/text-input';
+@import '../blocks/select-input';
+@import '../blocks/background-slider';
