feat: сделан весь функционал

--- a/src/blocks/filter.scss
+++ b/src/blocks/filter.scss
@@ -46,6 +46,13 @@
     border-radius: 7px;
     overflow: hidden;
     border: none;
+
+    &_type {
+
+      &_dropdown {
+        overflow: unset;
+      }
+    }
   }
 
   &__buttons {
