--- a/src/blocks/select-input.scss
+++ b/src/blocks/select-input.scss
@@ -1,14 +1,18 @@
 .select-input {
+  position: relative;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
   box-sizing: border-box;
-  padding: 0 23px;
+  padding: 0 24px 0 14px;
   height: 56px;
   width: 270px;
 
+  border-radius: 7px;
   background-color: rgba(255,255,255,0.16);
   border: none;
-  color: $text-color;
-  font-size: 16px;
-  line-height: 1;
   cursor: pointer;
 
   transition: background-color 0.3s ease;
@@ -22,10 +26,74 @@
     background-color: rgba(255,255,255,0.3);
   }
 
-  &__option {
+  &__value {
+    margin-right: 4px;
+
+    color: $text-color;
+    font-size: 16px;
+    line-height: 1;
+  }
+
+  &__icon {
+    width: 10px;
+    height: 12px;
+
+    fill: $text-color;
+    transform: rotate(90deg);
+  }
+
+  &__options-wrapper {
+    position: absolute;
+    top: -119px;
+    left: 0;
+    z-index: 50;
+
     box-sizing: border-box;
-    padding: 0 23px;
+    padding: 14px;
+    width: 100%;
+
+    background-color: $text-color;
+    border-radius: 7px;
+    cursor: initial;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0.3s, opacity 0.3s linear;
+
+    &_opened {
+      visibility: visible;
+      opacity: 1;
+    }
+  }
+
+  &__options {
+    display: flex;
+    flex-direction: column;
+
+    width: 100%;
+    height: 91px;
+    margin: 0;
+    padding: 0;
+
+    list-style: none;
+    overflow-y: scroll;
+  }
+
+  &__option {
+    padding-bottom: 8px;
+    margin-bottom: 8px;
 
     color: $alt-text-color;
+    font-size: 16px;
+    line-height: 1;
+
+    border-bottom: solid 1px rgba(0,0,0,0.3);
+    cursor: pointer;
+
+    @include link-hover-effect(0.5);
+
+    &:last-of-type {
+      margin-bottom: 0;
+      border-bottom: none;
+    }
   }
 }
