--- a/src/blocks/intro.scss
+++ b/src/blocks/intro.scss
@@ -8,7 +8,7 @@
 
   &__title {
     margin-top: 0;
-    margin-bottom: 50px;
+    margin-bottom: 54px;
 
     font-size: 39px;
     line-height: 1.18;
@@ -34,13 +34,35 @@
     &_type {
 
       &_choose {
-        padding: 20px;
+        padding: 0 23px 0 17px;
         margin-right: 30px;
+        height: 56px;
 
         border: solid 1px $text-color;
         border-radius: 7px;
-        // TODO: Анимации
-        @include link-hover-effect(0.5);
+
+        transition: box-shadow 0.3s, color 0.3s linear;
+
+        &:hover {
+          box-shadow: inset 0 0 0 30px $text-color;
+          color: $alt-text-color;
+        }
+
+        &:focus {
+          outline: none;
+          box-shadow: inset 0 0 0 30px $text-color;
+          color: $alt-text-color;
+        }
+
+        &:hover .intro__button-icon_type_choose {
+          fill: $alt-text-color;
+          stroke: $alt-text-color;
+        }
+
+        &:focus .intro__button-icon_type_choose {
+          fill: $alt-text-color;
+          stroke: $alt-text-color;
+        }
       }
 
       &_buy {
@@ -62,6 +84,8 @@
         margin-right: 12px;
         width: 11px;
         height: 11px;
+
+        stroke: $text-color;
       }
 
       &_buy {
@@ -75,7 +99,7 @@
   &__toggle-btns {
     position: absolute;
     top: 0;
-    left: -(30px + 78px);
+    left: -(30px + 82px);
 
     display: flex;
   }
@@ -83,19 +107,48 @@
   &__toggle-btn {
     position: relative;
 
-    padding: 0;
-    width: 39px;
-    height: 39px;
+    padding: 1px;
+    width: 40px;
+    height: 40px;
 
     cursor: pointer;
     background: none;
     border-radius: 50%;
     border: none;
     @include link-hover-effect(0.5);
+  }
 
-    &_active {
-      border: solid 1px $text-color;
-    }
+  &__toggle-btn-circle-icon {
+    display: block;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+    width: 100%;
+    height: 100%;
+
+    overflow: visible;
+    transform: translate(-50%, -50%) rotate(-90deg);
+  }
+
+  &__toggle-btn-circle {
+    display: block;
+
+    fill: none;
+    stroke: $text-color;
+    stroke-width: 1px;
+    // 125.6 - периметр круга
+    // Подробнее - https://habr.com/ru/post/349988/
+    stroke-dasharray: 125.6;
+    stroke-dashoffset: 125.6;
+    animation: circleFilling 6s ease-in-out infinite;
+  }
+
+  &__toggle-btn-circle-static {
+    fill: none;
+    stroke: rgba(255,255,255,0.3);
+    stroke-width: 1px;
   }
 
   &__toggle-btn-icon {
