--- a/src/blocks/links-with-preview.scss
+++ b/src/blocks/links-with-preview.scss
@@ -1,11 +1,13 @@
 .links-with-preview {
   // !
   width: 373px;
+  height: fit-content;
+  position: relative;
 
   &__list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    column-gap: 44px;
+    column-gap: 40px;
     row-gap: 12px;
 
     margin: 0 0 24px 0;
@@ -17,13 +19,19 @@
   &__preview {
     visibility: hidden;
 
+    position: absolute;
+    top: 100%;
+    left: 0;
+
     margin: 0;
     min-height: 320px;
 
+    transform: translateY(20px);
     opacity: 0;
-    transition: visibility 0.3s, opacity 0.3s linear;
+    transition: visibility 0.3s 0.1s, opacity 0.3s 0.1s, transform 0.3s 0.1s linear;
 
     &_opened {
+      transform: translateY(0);
       visibility: visible;
       opacity: 1;
     }
