--- a/src/blocks/page.scss
+++ b/src/blocks/page.scss
@@ -15,14 +15,23 @@
     box-sizing: border-box;
     padding: 0 40px;
 
+    @media screen and (max-width: 1679px) {
+      padding: 0 20px;
+    }
+
     &_place {
 
       &_intro {
         display: flex;
         justify-content: space-between;
 
-        padding-top: 80px + $header-height;
+        padding-top: 76px + $header-height;
         padding-bottom: 120px;
+
+        @media screen and (max-width: 1679px) {
+          padding-top: $header-height;
+          padding-bottom: 20px;
+        }
       }
     }
   }
@@ -30,7 +39,9 @@
   &__section-container {
     display: flex;
     justify-content: space-between;
-    width: calc(100% - 400px);
+
+    width: calc(100% - 407px);
+    min-height: 470px;
   }
 
   &__intro-wrapper {
@@ -39,5 +50,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
+    height: 100%;
+    min-height: 100vh;
   }
 }
