--- a/src/blocks/text-input.scss
+++ b/src/blocks/text-input.scss
@@ -3,7 +3,9 @@
   align-items: center;
 
   box-sizing: border-box;
-  padding: 20px 23px;
+  padding: 0 23px;
+  width: 135px;
+  height: 56px;
 
   // !
   max-width: 135px;
@@ -12,6 +14,12 @@
   border-right: solid 1px rgba(255,255,255, 0.3);
   cursor: text;
   transition: background-color 0.3s ease;
+
+  @media screen and (max-width: 1679px) {
+    padding: 0 12px;
+    height: 52px;
+    width: 120px;
+  }
 
   &:hover {
     background-color: rgba(255,255,255,0.3);
