--- a/src/blocks/_variables.scss
+++ b/src/blocks/_variables.scss
@@ -7,3 +7,6 @@ $text-color: white;
 $alt-text-color: black;
 
 $header-height: 125px;
+
+$intro-overlay: rgba(0,0,0,0.3);
+$intro-overlay-on-focus: rgba(0,0,0,0.6);
