--- a/src/blocks/filter.scss
+++ b/src/blocks/filter.scss
@@ -1,8 +1,4 @@
 .filter {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
   box-sizing: border-box;
   width: 100%;
   padding-top: 34px;
@@ -10,16 +6,30 @@
   padding-bottom: 42px;
   padding-left: 40px;
 
+  border-top: 1px solid rgba(255, 255, 255, 0.15);
+
   @media screen and (max-width: 1679px) {
     padding: 20px;
   }
 
-  border-top: 1px solid rgba(255, 255, 255, 0.15);
+  &__form {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    @media screen and (max-width: 479px) {
+      display: none;
+    }
+  }
 
   &__inputs {
     display: flex;
 
     margin-right: 20px;
+
+    @media screen and (max-width: 1023px) {
+      display: none;
+    }
   }
 
   &__container {
@@ -30,6 +40,21 @@
 
     &:last-of-type {
       margin-right: 0;
+    }
+
+    &_type {
+
+      &_place {
+        @media screen and (max-width: 1499px) {
+          display: none;
+        }
+      }
+
+      &_price {
+        @media screen and (max-width: 1279px) {
+          display: none;
+        }
+      }
     }
   }
 
@@ -111,5 +136,42 @@
     text-align: left;
     font-size: 13px;
     line-height: 1.31;
+  }
+
+  &__mobile-btn {
+    display: none;
+    align-items: center;
+    justify-content: space-between;
+
+    box-sizing: border-box;
+    width: 100%;
+    height: 50px;
+    padding: 0 20px;
+
+    background-color: rgba(255,255,255,0.3);
+    border-radius: 7px;
+    border: none;
+    cursor: pointer;
+
+    @include link-hover-effect(0.5);
+
+    @media screen and (max-width: 479px) {
+      display: flex;
+    }
+  }
+
+  &__mobile-btn-text {
+    font-size: 14px;
+    line-height: 1;
+    color: $text-color;
+  }
+
+  &__mobile-btn-icon {
+    display: block;
+
+    width: 16px;
+    height: 16px;
+
+    fill: $text-color;
   }
 }
