--- a/src/blocks/header.scss
+++ b/src/blocks/header.scss
@@ -14,10 +14,31 @@
   width: 100%;
   min-height: $header-height;
 
+  @media screen and (max-width: 1679px) {
+    padding-top: 20px;
+  }
+
+  @media screen and (max-width: 1279px) {
+    min-height: 47px;
+  }
+
+  @media screen and (max-width: 479px) {
+    padding-bottom: 30px;
+  }
+
   &__container {
     display: flex;
     justify-content: space-between;
     width: calc(100% - 407px);
+
+    @media screen and (max-width: 1499px) {
+      width: calc(100% - 200px);
+    }
+
+    @media screen and (max-width: 1279px) {
+      justify-content: flex-end;
+      align-items: center;
+    }
   }
 
   &__contacts {
@@ -26,20 +47,65 @@
   }
 
   &__contacts-number {
+    text-decoration: none;
+
+    @include link-hover-effect(0.5);
+
+    @media screen and (max-width: 1279px) {
+      margin-right: 24px;
+    }
+  }
+
+  &__contacts-number-text {
+    display: block;
+
     margin-bottom: 8px;
 
     color: $text-color;
-    text-decoration: none;
     font-size: 20px;
     line-height: 1.15;
     letter-spacing: -0.03em;
-    @include link-hover-effect(0.5);
+
+    @media screen and (max-width: 1279px) {
+      display: none;
+    }
+  }
+
+  &__contacts-number-icon {
+    display: none;
+
+    width: 36px;
+    height: 36px;
+
+    fill: none;
+    stroke: $text-color;
+
+    @media screen and (max-width: 1279px) {
+      display: block;
+    }
   }
 
   &__contacts-label {
     font-size: 16px;
     line-height: 1.19;
     opacity: 0.5;
+
+    @media screen and (max-width: 1279px) {
+      display: none;
+    }
+  }
+
+  &__menu-container {
+    display: flex;
+    height: fit-content;
+  }
+
+  &__menu {
+    margin-right: 38px;
+
+    @media screen and (max-width: 1023px) {
+      display: none;
+    }
   }
 
   &__list {
@@ -59,7 +125,6 @@
 
     &:last-of-type {
       margin-right: 0;
-      margin-left: 20px;
     }
   }
 
@@ -119,6 +184,8 @@
   }
 
   &__menu-btn {
+    align-self: center;
+
     box-sizing: border-box;
     width: 48px;
     height: 10px;
@@ -131,5 +198,10 @@
     cursor: pointer;
 
     @include link-hover-effect(0.5);
+
+    @media screen and (max-width: 479px) {
+      width: 38px;
+      height: 10px;
+    }
   }
 }
