--- a/src/blocks/intro.scss
+++ b/src/blocks/intro.scss
@@ -13,11 +13,30 @@
     font-size: 39px;
     line-height: 1.18;
     font-weight: 400;
+    letter-spacing: -0.02em;
+
+    @media screen and (max-width: 1023px) {
+      margin-bottom: 32px;
+
+      font-size: 32px;
+    }
+
+    @media screen and (max-width: 479px) {
+      max-width: 340px;
+
+      font-size: 26px;
+      line-height: 1.19;
+    }
   }
 
   &__btns {
     display: flex;
     align-items: center;
+
+    @media screen and (max-width: 1023px) {
+      flex-direction: column;
+      align-items: flex-start;
+    }
   }
 
   &__button {
@@ -31,6 +50,11 @@
     line-height: 1.19;
     box-sizing: border-box;
 
+    @media screen and (max-width: 479px) {
+      font-size: 12px;
+      line-height: 1;
+    }
+
     &_type {
 
       &_choose {
@@ -43,15 +67,34 @@
 
         transition: box-shadow 0.3s, color 0.3s linear;
 
+        @media screen and (max-width: 1023px) {
+          margin-right: 0;
+          margin-bottom: 30px;
+        }
+
+        @media screen and (max-width: 479px) {
+          height: 40px;
+
+          padding: 0 15px 0 10px;
+        }
+
         &:hover {
           box-shadow: inset 0 0 0 30px $text-color;
           color: $alt-text-color;
+
+          @media screen and (max-width: 479px) {
+            box-shadow: inset 0 0 0 20px $text-color;
+          }
         }
 
         &:focus {
           outline: none;
           box-shadow: inset 0 0 0 30px $text-color;
           color: $alt-text-color;
+
+          @media screen and (max-width: 479px) {
+            box-shadow: inset 0 0 0 20px $text-color;
+          }
         }
 
         &:hover .intro__button-icon_type_choose {
@@ -86,12 +129,22 @@
         height: 11px;
 
         stroke: $text-color;
+
+        @media screen and (max-width: 479px) {
+          width: 8px;
+          height: 8px;
+        }
       }
 
       &_buy {
         margin-left: 8px;
         width: 10px;
         height: 12px;
+
+        @media screen and (max-width: 479px) {
+          width: 6px;
+          height: 8px;
+        }
       }
     }
   }
@@ -102,6 +155,10 @@
     left: -(30px + 82px);
 
     display: flex;
+
+    @media screen and (max-width: 1023px) {
+      display: none;
+    }
   }
 
   &__toggle-btn {
