--- a/src/blocks/links-with-preview.scss
+++ b/src/blocks/links-with-preview.scss
@@ -1,8 +1,15 @@
 .links-with-preview {
-  // !
   width: 373px;
   height: fit-content;
   position: relative;
+
+  @media screen and (max-width: 1279px) {
+    width: 320px;
+  }
+
+  @media screen and (max-width: 1023px) {
+    display: none;
+  }
 
   &__list {
     display: grid;
@@ -66,11 +73,21 @@
 
     font-size: 16px;
     line-height: 1.19;
+
+    @media screen and (max-width: 1279px) {
+      font-size: 14px;
+      line-height: 1.1;
+    }
   }
 
   &__image-description {
     font-size: 16px;
     line-height: 1.19;
     opacity: 0.5;
+
+    @media screen and (max-width: 1279px) {
+      font-size: 14px;
+      line-height: 1.1;
+    }
   }
 }
