--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -4,6 +4,7 @@
 @import '../blocks/mixins';
 @import '../blocks/variables';
 @import '../blocks/keyframes.css';
+@import '../blocks/visually-hidden.css';
 
 @import '../blocks/page';
 
