--- a/src/blocks/intro.scss
+++ b/src/blocks/intro.scss
@@ -173,6 +173,11 @@
     border-radius: 50%;
     border: none;
     @include link-hover-effect(0.5);
+
+    &_disabled {
+      opacity: 0.5;
+      cursor: unset;
+    }
   }
 
   &__toggle-btn-circle-icon {
