--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -21,3 +21,4 @@
 @import '../blocks/text-input';
 @import '../blocks/select-input';
 @import '../blocks/background-slider';
+@import '../blocks/noUiSlider';
